--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 server.port=8080
 
+spring.main.allow-bean-definition-overriding=true
+
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
