Working on unit tests for services

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.main.allow-bean-definition-overriding=true
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.open-in-view=true
 
 spring.datasource.username=root
 spring.datasource.password=password123!
