Working on unit tests for services

--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,7 +5,8 @@ spring.datasource.password=sa
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 spring.jpa.defer-datasource-initialization=true
-spring.h2.console.enabled=true
+logging.level.com.ecinema.app.repositories=info;
+spring.h2.console.enabled=false
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
