--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -5,10 +5,9 @@ spring.datasource.password=sa
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 spring.jpa.defer-datasource-initialization=true
-logging.level.com.ecinema.app.repositories=info;
+logging.level.com.ecinema.app=debug;
 spring.h2.console.enabled=false
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
 spring.main.banner-mode=log
-logging.level.com=info
