--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,19 +1,17 @@
 server.port=8080
 spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.username=root
 spring.datasource.username=${MYSQL_USER:root}
-#spring.datasource.password=password123!
-spring.datasource.password=${MYSQL_PASSWORD:password123!}
+#spring.datasource.password=${MYSQL_PASSWORD:root}
 spring.main.allow-bean-definition-overriding=true
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:${MYSQL_PORT:3306}/${MYSQL_DB:ecinema_db}?allowPublicKeyRetrieval=true&useSSL=false
-#spring.datasource.url=jdbc:mysql://localhost:3306/ecinema_db?allowPublicKeyRetrieval=true&useSSL=false
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:mysqldb}:${MYSQL_PORT:3306}/${MYSQL_DB:ecinemadb}?allowPublicKeyRetrieval=true&useSSL=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=csci4050.b7.ecinema@gmail.com
-spring.mail.password=cscib7ecinema
-spring.mail.protocol=smtp
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=csci4050.b7.ecinema@gmail.com
+#spring.mail.password=lkwntqqfhhwrlsgo
+#spring.mail.protocol=smtp
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
 logging.level.com.ecinema.app.*=debug
